Extend pandas support to all related functions